--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 .flex-row{
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .flex-col{
     flex: 1;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    max-width: 150px;
+    max-height: 150px;
 }
